ispravljena blagajna js

--- a/pregled.html
+++ b/pregled.html
@@ -14,7 +14,7 @@
     <div class="operation">
       <pre id="list"></pre>
       <div id="details">
-        <div id="titleDetails"><span>Detalji</span><span id="extra" hidden>Zaduzi sa valutom:</span><input hidden id='preord' type="date"><span id="correctOrder" hidden>Ispravi nabavku</span></div>
+        <div id="titleDetails"><span>Detalji</span><span id="extra" hidden>Valuta:</span><input hidden id='preord' type="date"><span id="correctOrder" hidden>Ispravi nabavku</span></div>
         <hr/>
         <pre id="listDetails"></pre>
         </div>
